# organizer

./: .env  .gitignore  .travis.yml  Cargo.toml  README.md  TODO.md  flake.nix  org.md  prompt.md  rustfmt.toml  shell.nix
examples/: blueprint.yml  config.yml
organize-cli/: Cargo.toml
organize-cli/src/: cli.rs  main.rs
organize-cli/src/cmd/: edit.rs  logs.rs  mod.rs  run.rs  snapshot.rs  undo.rs
organize-core/: Cargo.toml
organize-core/migrations/: 20250620233911_initial_schema.sql  20250623125855_initial_schema.sql
organize-core/src/: action.rs  batch.rs  config.rs  engine.rs  errors.rs  filter.rs  folder.rs  grouper.rs  hook.rs  lib.rs  options.rs  partitioner.rs  pipeline.rs  resolver.rs  resource.rs  rule.rs  selector.rs  sorter.rs  splitter.rs  storage.rs
organize-core/src/builtins/: mod.rs
organize-core/src/builtins/actions/: echo.rs  mod.rs  move.rs
organize-core/src/builtins/filters/: empty.rs
organize-core/src/builtins/groupers/: extension.rs
organize-core/src/builtins/partitioners/: extension.rs  mod.rs  ratio.rs
organize-core/src/builtins/selectors/: first.rs
organize-core/src/builtins/sorters/: random.rs
organize-core/src/builtins/splitters/: ratio.rs
organize-core/src/builtins/variables/: config.rs  env.rs  file.rs  hash.rs  json.rs  mod.rs  path.rs  regex.rs  root.rs  rule.rs  system.rs  user.rs  uuid.rs
organize-core/src/common/: mod.rs
organize-core/src/config/: context.rs  mod.rs  rule.rs
organize-core/src/config/actions/: copy.rs  delete.rs  echo.rs  email.rs  extract.rs  hardlink.rs  mod.rs  move.rs  script.rs  symlink.rs  trash.rs  write.rs
organize-core/src/config/actions/common/: mod.rs
organize-core/src/config/filters/: content.rs  empty.rs  extension.rs  filename.rs  mime.rs  mod.rs  regex.rs
organize-core/src/config/folders/: mod.rs
organize-core/src/config/options/: mod.rs
organize-core/src/config/variables/: hash.rs  json.rs  mod.rs  regex.rs  simple.rs  size.rs
organize-core/src/config/variables/builtins/: hash.rs  metadata.rs  mod.rs  path.rs
organize-core/src/config/variables/custom/: mod.rs  regex.rs  simple.rs
organize-core/src/context/: mod.rs
organize-core/src/context/services/fs/: locker.rs  manager.rs  mod.rs
organize-core/src/context/services/history/: mod.rs
organize-core/src/file/: mod.rs
organize-core/src/journal/: mod.rs
organize-core/src/parser/: ast.rs  errors.rs  lexer.rs  mod.rs
organize-core/src/path/: is_hidden.rs  locker.rs  mod.rs  prepare.rs  resolver.rs
organize-core/src/stdx/: path.rs
organize-core/src/string/: placeholder.rs
organize-core/src/templates/: compiler.rs  engine.rs  lazy.rs  mod.rs  registry.rs  template.rs  value.rs  variable.rs
organize-core/src/templates/filters/: content.rs  mod.rs  path.rs
organize-core/src/utils/: backup.rs  fs.rs  mod.rs
organize-pipe/: Cargo.toml
organize-pipe/src/: engine.rs  errors.rs  lexer.rs  lib.rs  parser.rs  template.rs  variable.rs
organize-pipe/src/templates/: template.rs
organize-sdk/: Cargo.toml
organize-sdk/src/: action.rs  config.rs  engine.rs  error.rs  errors.rs  filter.rs  lib.rs  locker.rs  options.rs  pipeline.rs  resolver.rs  resource.rs  rule.rs  storage.rs
organize-sdk/src/common/: mod.rs
organize-sdk/src/context/: mod.rs  scope.rs  settings.rs
organize-sdk/src/context/services/: mod.rs
organize-sdk/src/context/services/fs/: backup.rs  connections.rs  locker.rs  manager.rs  mod.rs  resource.rs
organize-sdk/src/context/services/history/: mod.rs
organize-sdk/src/context/settings/: global.rs
organize-sdk/src/engine/: batch.rs  mod.rs  pipeline.rs  rule.rs  stage.rs
organize-sdk/src/location/: mod.rs  options.rs
organize-sdk/src/plugins/: action.rs  filter.rs  mod.rs  partitioner.rs  selector.rs  sorter.rs  storage.rs
organize-sdk/src/stdx/: path.rs
organize-sdk/src/templates/: accessor.rs  compiler.rs  function.rs  grammar.pest  mod.rs  parser.rs  registry.rs  schema.rs  template.rs
organize-sdk/src/utils/: backup.rs  fs.rs  mod.rs
organize-std/: Cargo.toml
organize-std/src/: lib.rs
organize-std/src/actions/: copy.rs  echo.rs  hardlink.rs  mod.rs  symlink.rs
organize-std/src/filters/: empty.rs
organize-std/src/functions/: input.rs
organize-std/src/partitioners/: extension.rs  ratio.rs
organize-std/src/selectors/: first.rs
organize-std/src/sorters/: random.rs
organize-std/src/storage/: local.rs  mod.rs  sftp.rs  vfs.rs
organize-std/src/variables/: args.rs  env.rs  file.rs  mod.rs
organize_core/: Cargo.toml
organize_core/src/: backup.rs  file.rs  lib.rs  logger.rs  resource.rs  utils.rs
organize_core/src/config/: mod.rs  rule.rs
organize_core/src/config/actions/: copy.rs  delete.rs  echo.rs  email.rs  extract.rs  hardlink.rs  io_action.rs  mod.rs  move.rs  script.rs  symlink.rs  trash.rs  write.rs
organize_core/src/config/filters/: empty.rs  extension.rs  filename.rs  mime.rs  mod.rs  regex.rs
organize_core/src/config/folders/: de.rs  mod.rs
organize_core/src/config/options/: apply.rs  de.rs  match.rs  max_depth.rs  mod.rs  recursive.rs
organize_core/src/config/variables/: mod.rs  regex.rs  simple.rs
organize_core/src/data/: config.rs  mod.rs  path_to_recursive.rs  path_to_rules.rs
organize_core/src/data/actions/: delete.rs  echo.rs  mod.rs  script.rs
organize_core/src/data/config/: mod.rs
organize_core/src/data/filters/: filename.rs  mod.rs
organize_core/src/data/folders/: de.rs
organize_core/src/data/options/: de.rs  match.rs  mod.rs
organize_core/src/data/settings/: de.rs  mod.rs
organize_core/src/file/: mod.rs
organize_core/src/fsa/: mod.rs
organize_core/src/logger/: mod.rs
organize_core/src/path/: expand.rs  is_hidden.rs  prepare.rs  update.rs
organize_core/src/register/: de.rs  mod.rs
organize_core/src/settings/: de.rs  mod.rs
organize_core/src/simulation/: mod.rs
organize_core/src/string/: capitalize.rs  placeholder.rs  placeholder_fsa.drawio
organize_core/src/templates/: mod.rs
organize_core/src/templates/filters/: content.rs  misc.rs  mod.rs  path.rs  size.rs
organize_core/src/utils/: mod.rs
(+203 files in other folders)
