[package]
name = "organize"
version = "0.3.0"
authors = ["KBR9 <cabero96@gmail.com>"]
edition = "2018"
description = "file butler for the poweruser"
repository = "https://github.com/cbr9/organize"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.3"
clap = { version = "4.2.2", features = ["derive"] }
serde = { version = "1.0.160", features = ["derive"] }
chrono = "0.4.24"
colored = "2.0.0"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3"
sysinfo = "0.28.4"
rayon = "1.7"
log = "0.4"
fern = {version = "0.6", features = ["colored"] }
toml = "0.7.3"
anyhow = "1.0.70"
organize_core = { path = "organize_core" }
path-clean = "1.0.1"
walkdir = "2.3.3"
dialoguer = "0.11.0"
serde_json = "1.0.96"
derive_more = "0.99.17"
tera = "1.20.0"
once_cell = "1.19.0"
lazy_static = "1.5.0"
dirs = "5.0.1"

[workspace]
members = ["organize_core"]

[dev-dependencies]
pretty_assertions = "1.3.0"
