[workspace.package]
name = "organize"
version = "0.4.0-alpha"
authors = ["KBR9 <cabero96@gmail.com>"]
edition = "2018"
description = "file butler for the poweruser"
repository = "https://github.com/cbr9/organize"

[workspace]
resolver = "2"
members = [
  # "organize-lib",
  "organize-cli",
  "organize-pipe",
  "organize-sdk" ,
  "organize-stdx"
]

default-members = ["organize-cli"]

[workspace.dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
colored = "2.0.0"
config = "0.14.0"
derive_more = "0.99.17"
dialoguer = "0.10.4"
dirs = "5.0.1"
dyn-clone = "1.0.19"
dyn-eq = "0.1.3"
itertools = "0.10.5"
lettre = {version = "0.11.17", features = ["serde", "tracing", "mime03"]}
log = "0.4"
mime = "0.3.17"
mime_guess = "2.0.4"
num-traits = "0.2.15"
organize-lib = { path = "./organize-lib" }
organize-sdk = { path = "./organize-sdk" }
organize-pipe = { path = "./organize-pipe" }
path-clean = "1.0.1"
pdf-extract = "0.7.7"
rayon = "1.10.0"
regex = "1.7.3"
serde = { version = "1.0.160", features = ["derive"] }
serde_regex = "1.1.0"
sha256 = "1.5.0"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3.5.0"
tera = "1.20.0"
toml = "0.7.3"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
trash = "4.1.1"
typetag = "0.2.20"
uuid = { version = "1.17.0", features = ["v4"] }
walkdir = "2.3.3"
zip = "2.1.6"
zip-extensions = "0.8.1"



