[workspace.package]
name = "organize"
version = "0.4.0-alpha"
authors = ["KBR9 <cabero96@gmail.com>"]
edition = "2018"
description = "file butler for the poweruser"
repository = "https://github.com/cbr9/organize"

[workspace]
resolver = "2"
members = [
  "organize-cli",
  "organize-sdk",
  "organize-std",
]

default-members = ["organize-cli"]

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
config = "0.14.0"
dialoguer = "0.10.4"
dirs = "5.0.1"
dyn-clone = "1.0.19"
dyn-eq = "0.1.3"
itertools = "0.10.5"
path-clean = "1.0.1"
serde = { version = "1.0.160", features = ["derive"] }
strum = { version = "0.26", features = ["derive"] }
typetag = "0.2.20"

