[package]
name = "organize-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "organize"
path = "src/main.rs"

[dependencies]
chrono.workspace = true
anyhow.workspace = true
clap.workspace = true
colored.workspace = true
organize-lib.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["full"] }
lazy_static = "1.5.0"
dialoguer.workspace = true

