[package]
name = "organize-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "organize"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["full"] }
organize-core = { path = "../organize-core" }
lazy_static = "1.5.0"
chrono = "0.4.41"
anyhow.workspace = true
clap.workspace = true
colored = "3.0.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
dialoguer.workspace = true

