[package]
name = "organize-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "organize"
path = "src/main.rs"

[dependencies]
async-trait = "0.1.88"
tokio = { version = "1.45.1", features = ["full"] }
organize-sdk = { path = "../organize-sdk" }
organize-std = { path = "../organize-std" }
lazy_static = "1.5.0"
chrono = "0.4.41"
anyhow.workspace = true
clap.workspace = true
colored = "3.0.0"
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
dialoguer.workspace = true
notify = "8.0.0"
console = "0.16.0"
indicatif = "0.18.0"
dashmap = "6.1.0"
base64 = "0.22.1"
serde_json = "1.0.140"
path-clean = "1.0.1"
toml = "0.8.23"

