[package]
name = "organize-core"
version = "0.3.0-alpha"
authors = ["KBR9 <cabero96@gmail.com>"]
edition = "2018"

[dependencies]
anyhow.workspace = true
lettre.workspace = true
chrono.workspace = true
config.workspace = true
derive_more.workspace = true
dialoguer.workspace = true
dirs.workspace = true
dyn-clone.workspace = true
dyn-eq.workspace = true
itertools.workspace = true
log.workspace = true
mime.workspace = true
mime_guess.workspace = true
path-clean.workspace = true
pdf-extract.workspace = true
rayon.workspace = true
regex.workspace = true
serde.workspace = true
serde_regex.workspace = true
sha256.workspace = true
strum.workspace = true
tempfile.workspace = true
tera.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-appender.workspace = true
tracing-subscriber.workspace = true
trash.workspace = true
typetag.workspace = true
uuid.workspace = true
walkdir.workspace = true
zip.workspace = true
zip-extensions.workspace = true
dashmap = "6.1.0"
shlex = "1.3.0"
gag = "1.0.0"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["full"] }
async-trait = "0.1.88"
futures = "0.3.31"
whirlwind = "0.1.1"
libc = "0.2.174"

[dev-dependencies]
pretty_assertions = "1.3.0"
serde_test = "1.0.160"
rand = "0.8.5"
