[package]
name = "organize-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
ariadne = "0.5.1"
chumsky = "0.10.1"
logos = "0.15.0"
anyhow.workspace = true
async-trait = "0.1.88"
clap.workspace = true
config.workspace = true
dashmap = "6.1.0"
dialoguer.workspace = true
dirs.workspace = true
dotenvy = "0.15.7"
dyn-clone.workspace = true
dyn-eq.workspace = true
itertools.workspace = true
moka = { version = "0.12.10", features = ["future"] }
path-clean.workspace = true
serde.workspace = true
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
strum.workspace = true
thiserror = "2.0.12"
typetag.workspace = true
dotenvy_macro = "0.15.7"
tokio = { version = "1.45.1", features = ["full"] }
tera = "1.20.0"
libc = "0.2.174"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-appender = "0.2.3"
futures = "0.3.31"
walkdir = "2.5.0"
tempfile = "3.20.0"
sha2 = "0.10.9"
uuid = "1.17.0"
mime_guess = "2.0.5"
