[package]
name = "organize-pipe"
version.workspace = true
authors.workspace = true
edition.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
ariadne = "0.5.1"
async-trait = "0.1.88"
chumsky = "0.10.1"
logos = "0.15.0"
regex.workspace = true
serde_json = "1.0.140"
thiserror = "2.0.12"
