[package]
name = "organize-sdk"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"
description = "The core SDK for the organize project."
repository = "https://github.com/cbr9/organizer"

[dependencies]
anyhow = { workspace = true }
async-trait = "0.1.88"
clap = { workspace = true }
dashmap = "6.1.0"
dialoguer = { workspace = true }
dirs = { workspace = true }
dotenvy = "0.15.7"
dyn-clone = { workspace = true }
dyn-eq = { workspace = true }
moka = { version = "0.12.10", features = ["future"] }
serde = { workspace = true }
serde_json = "1.0.140"
sqlx = { version = "0.8.6", features = ["chrono", "runtime-tokio", "sqlite"] }
strum = { workspace = true }
thiserror = "2.0.12"
typetag = { workspace = true }
tokio = { version = "1.45.1", features = ["full"] }
libc = "0.2.174"
tracing = "0.1.41"
futures = "0.3.31"
tempfile = "3.20.0"
sha2 = "0.10.9"
uuid = "1.17.0"
mime_guess = "2.0.5"
url = "2.5.4"
toml = "0.8.23"
pest = "2.8.1"
pest_derive = "2.8.1"
glob = "0.3.1"
inventory = "0.3.20"
ssh2 = "0.9.5"
russh = "0.53.0"
russh-sftp = "2.1.1"
deadpool = "0.12.2"
