[package]
name = "organize-std"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"
description = "The standard library of components for the organize project."
repository = "https://github.com/cbr9/organizer"

[dependencies]
organize-sdk = { path = "../organize-sdk" }
anyhow.workspace = true
async-trait = "0.1.88"
serde = { workspace = true }
typetag = { workspace = true }
tracing = "0.1.41"
rand = "0.9.1"
inventory = "0.3.20"
tokio = { version = "1.46.0", features = ["full"] }
dirs.workspace = true
libc = "0.2.174"
num_cpus = "1.16.0"
walkdir = "2.5.0"
futures = "0.3.31"
tokio-stream = "0.1"
russh = "0.53.0"
russh-sftp = "2.1.1"
dyn-clone.workspace = true
dyn-eq.workspace = true
tempfile = "3.20.0"
path-clean = "1.0.1"
deadpool = "0.12.2"
bytes = "1.10.1"
async-stream = "0.3.6"
tokio-util = { version = "0.7.15", features = ["codec", "full"] }
moka = { version = "0.12.10", features = ["future"] }
dashmap = "6.1.0"
serde_json = "1.0.140"
base64 = "0.22.1"
uuid = "1.17.0"



