[package]
name = "organize_core"
version = "0.3.0-alpha"
authors = ["KBR9 <cabero96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.3"
serde = { version = "1.0.160", features = ["derive"] }
dialoguer = { version = "0.10.4" }
colored = "2.0.0"
rayon = "1.7"
trash = "4.1.1"
log = "0.4"
toml = "0.7.3"
anyhow = "1.0.70"
num-traits = "0.2.15"
mime_guess = "2.0.4"
mime = "0.3.17"
strum = { version = "0.26", features = ["derive"] }
chrono = "0.4.24"
bincode = "1.3.3"
walkdir = "2.3.3"
itertools = "0.10.5"
tempfile = "3.5.0"
derive_more = "0.99.17"
tera = "1.20.0"
sha256 = "1.5.0"
config = "0.14.0"
path-clean = "1.0.1"
dirs = "5.0.1"
zip = "2.1.6"
zip-extensions = "0.8.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
pdf-extract = "0.7.7"
serde_regex = "1.1.0"
lettre = { version = "0.11.7", features = ["serde", "tracing", "mime03"] }
typetag = "0.2.20"
dyn-clone = "1.0.19"
dyn-eq = "0.1.3"

[dev-dependencies]
pretty_assertions = "1.3.0"
serde_test = "1.0.160"
rand = "0.8.5"
